public interface Factor {
    Poly toPoly();
}
